Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.11
-
Unexpected results
-
Under --bootstrap mode, used in mariadb-install-db, an unwanted delay was removed and it now calls the plugin clean up functions
-
Q2/2026 Server Development, Q3/2026 Server Maintenance
Description
When the server is started with mariadbd --bootstrap at the end of the bootstraping the server just existings without calling the plugin shutdown hooks.
Attachments
Issue Links
- blocks
-
MDEV-39541 mem_pressure::~mem_pressure() causes a crash on bootstrap
-
- Closed
-